--- a/style.css
+++ b/style.css
@@ -32,39 +32,37 @@ h4 {
 body {
   margin: 0;
   padding: 0;
-  //background: #333;
-  //background-attachment: fixed;
-  //background-size: cover;
 }
 
 
 
-.video {
-  display: block;
+#vid-back {
+	max-width: 100%;
+	margin: 0 auto;
+	padding: 0 0 0;
 }
 
-#video-background {
-  position: center;
-  right: 0; 
-  top: 0;
-  min-width: 100%; 
-  min-height: 100%;
-  width: auto; 
-  height: auto;
-  z-index: -100;
-  //overflow: hidden;
+#responsive-vid {
+	width: 100%;
+	height: 0;
+	padding-bottom: 56.25%;
+	position: relative;
+}
+
+iframe {
+	position: absolute;
+	width: 100%; 
+	height: 100%;
 }
 
 .flexen {
-  //position: fixed;
-  //clear: both;
   min-width: 100%;
 }
 
 .flex-content {
 	display: flex;
 }
-  
+
 @media (max-width: 640px) {
   .content-all {
     margin: 0;
@@ -81,7 +79,7 @@ body {
   #video-background{
     max-width: 100%;
     margin: 0;
-    
+	max-height: 300px;
   }
 
   .zf-fmFooter{
@@ -93,23 +91,20 @@ body {
 
 
 .parent {
-	//background-color: red;
-  line-height: 150%;
-  font-size: 25px;
+	line-height: 150%;
+	font-size: 25px;
 	flex: 2;
 }
 
 .parent-2 {
-  margin: 0 10px 0 10px;
-  align-items: center;
-	//background-color: lightblue;
+  	margin: 0 10px 0 10px;
 	display: flex;
 	flex-direction: column;
 	flex: 1;
 }
 
 .flex-dis {
-  margin: 0 20px 0 20px;
+	margin: 0 10% 0 10%;
 	padding-bottom: 100px;
 	padding-left: 1px;
 	flex: 1;
@@ -118,19 +113,17 @@ body {
 }
 
 .flex-josh {
-	//background-color: lightgreen;
 	flex-direction: column;
 	margin-top: 1em;
 	flex: 1;
 }
 
 .flex-shaun {
-	//background-color: lightgray;
 	flex: 1;
 }
 
 #red-text {
-  color: red;
+	color: red;
 }
 
 figure.snip0069 {
@@ -271,7 +264,7 @@ img, a:hover {
 .zf-clearBoth {
 	clear:both;
 }
-ol, ul {
+ #no-bullets {
 	list-style: none outside none;
 }
 .zf-normalText {
@@ -886,5 +879,3 @@ ol, ul {
 	 margin-left: 35%;
 }
 
-
-/****************Form Top Align Starts Here****************/	
