--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 	font-family: fira sans;
 }
 
-h1 {
+//*h1 {
 	font-family: Bebas Neue;
 }
 
@@ -27,7 +27,7 @@ h3 {
 
 h4 {
 	font-family: Bebas Neue;
-}
+}*//
 
 body {
 	margin: 0;
